--- a/views/creation_partie.ejs
+++ b/views/creation_partie.ejs
@@ -11,7 +11,7 @@
     <body>
         <!-- Navbar-->
         <%- include('navbar.php'); %>
-        <form method="get" action="index.php" autocomplete="on"></form>
+        <form method="get" action="index.php" autocomplete="on">
             <div class="form-group col-6 mx-auto">
                 <input type="text"  class="form-control" name="Alim" placeholder="Nom de la Partie">
             </div>
