--- a/views/resultat.ejs
+++ b/views/resultat.ejs
@@ -3,11 +3,55 @@
 <html lang="fr" >
     <head>
     <meta charset="utf-8" />
-    <title>Pr</title>
+    <title>Resultat</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     </head>
     <body>
+        <div>
+            <h5>Resultat de la recherche</h5>
+
+            <select class="form-select" aria-label="Default select example">
+                <option selected>partie recente</option>
+                <option value="1">partie ancienne</option>
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Systeme</option>
+                <option value="1">D&D 4e</option>
+                <option value="2">CyberPunk</option>
+                <option value="3">Personalisé</option>
+            </select>
+            </select><select class="form-select" aria-label="Default select example">
+                <option selected>titre</option>
+                <option value="1">Game master</option>
+                <option value="2">description</option>
+                <option value="3">etiquette</option>
+            </select><select class="form-select" aria-label="Default select example">
+                <option selected>nombre de joueur</option>
+                <option value="1">Game master</option>
+                <option value="2">description</option>
+                <option value="3">etiquette</option>
+            </select>   
+            <div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h6 class="card-title">le paladin de ekumul</h5>
+                        <p class="card-text">legend de troi</p>
+                        <ul>
+                            <li>RPG</li>
+                            <li>Fantasy</li>
+                            <li>contenue mature</li>
+                        </ul>
+                        <p>3/4 joueurs</p>
+                    </div>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <h6 class="card-title">Desciption</h6>
+                    <p class="card-text">guerre de trois sang et plus</p>
+                    <button type="button" class="btn btn-primary">Plus de detail</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
