--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -1,25 +1,41 @@
 <div class="modal-body">
-    <form method="get" action="resultat.ejs" autocomplete="on">
+    <form method="post" action="/recherche" autocomplete="on">
       <div class="mb-3">
         <label class="col-form-label">Mots clé de la recherche</label>
-        <input type="text" class="form-control" >
+        <input type="text" name="saisie" class="form-control" >
         <label  for="Systeme">Rechercher dans : </label>
-          <select class="form-select" aria-label="Default select example">
-              <option selected>titre</option>
-              <option value="1">Game master</option>
-              <option value="2">description</option>
-              <option value="3">etiquette</option>
+          <select class="form-select" name="dans" aria-label="Default select example">
+              <option value="Titre">Titre</option>
+              <option value="Auteur">Auteur</option>
+              <option value="Description">Description</option>
           </select>
       </div>
       <div class="form-check">
         <p>Caracteristique de la partie : </p>
             <p>genre</p>
-            <input type="checkbox" name="option" id = "fantasy"value="">
+            <input type="checkbox" name="carac[]" id = "fantasy"value="10">
             <label class="form-ckeck-label" for="fantasy">fantasy </label>
-            <input type="checkbox" name="option" id="Sci-fi"value="">
+            <input type="checkbox" name="carac[]" id="Sci-fi"value="11">
             <label class="form-ckeck-label" for="Sci-fi">Sci-fi </label>
-            <input type="checkbox" name="option" id="CyberPunk"value="">
+            <input type="checkbox" name="carac[]" id="CyberPunk"value="12">
             <label class="form-ckeck-label" for="CyberPunk">"CyberPunk</label>
+
+
+            <p>Joueurs</p>
+            <input type="checkbox" name="carac[]" id = "debutant"value="Débutant" >
+            <label class="form-ckeck-label" for="debutant">Débutant </label>
+            <input type="checkbox" name="carac[]" id="expert"value="Expert">
+            <label class="form-ckeck-label" for="expert">Expert</label>
+            <input type="checkbox" name="carac[]" id="exigeant"value="Exigeant">
+            <label class="form-ckeck-label" for="exigeant">"Exigeant</label>
+
+            <p>Type de partie</p>
+            <input type="checkbox" name="carac[]" id = "Rapide"value="Rapide" >
+            <label class="form-ckeck-label" for="Rapide">Rapide </label>
+            <input type="checkbox" name="carac[]" id="longue"value="Longue">
+            <label class="form-ckeck-label" for="longue">Longue </label>
+            <input type="checkbox" name="carac[]" id="difficile"value="Difficile">
+            <label class="form-ckeck-label" for="difficile">"Difficile</label>
     </div>
     <input type="submit" class="btn btn-primary" name="submit" value="recherche">
     </form>
