--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -2,6 +2,7 @@
     <head>
         <title>Connexion</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body class="container">
         <div class="page-header">
@@ -22,7 +23,7 @@
                         <input type="password" name="password" for="password"/>
                     </div>
                     <div>
-                        <input class="btn btn-primary" type="submit" value="Log In"/>
+                        <input class="btn-agree" type="submit" value="Log In"/>
                     </div>
                 </form>
             </div>
