--- a/views/detail_partie.ejs
+++ b/views/detail_partie.ejs
@@ -1,55 +1,72 @@
 <!DOCTYPE html>
 
 <html lang="fr" >
-    <head>
+<head>
     <meta charset="utf-8" />
     <title><%= infos.donnee.nomPartie%></title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    </head>
-    <body>
-        <h2><%= infos.donnee.nomPartie%></h2>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-        <!-- Gauche-->
-        <div>
-            <p><b>Partie cree par :</b> <%= infos.donnee.nomCreateur %></p>
-            <button type="button" class="btn btn-primary">Acceder au profil</button>
-
-            <p><b>Systeme de jeu :</b> <%= infos.donnee.nomSysteme%></p>
-
-            <!--<p>horaire de la prochaine partie: 04/01/2021</p>-->
-
-            <p><b>Description</b></p>
-            <div>
-                <p><%= infos.donnee.description%></p>
-            </div>
-            <p>Caracteristique de la partie</p>
-            <ul>
-                <% infos.donnee.caracteristiques.forEach((carac) =>{ %>
+<div class="container">
+    <div class="row">
+        <div class="col-xl">
+            <div class="row">
+                <div class="col-md">
 
 
 
-                <li><%= carac.caracteristique%></li>
+                    <h2><%= infos.donnee.nomPartie%></h2>
 
-              <% });  %>
-            </ul>
-            <button type="button" class="btn btn-primary">Contacter l'organisateur</button>
-        </div>
+                    <!-- Gauche-->
+                    <div style="background-color: grey; border-radius: 12px; padding-bottom: 4px">
+                        <p><b>Partie cree par :</b> <%= infos.donnee.nomCreateur %></p>
+                        <button type="button" class="btn-contact">Acceder au profil</button>
 
-        <!--
-        <div>
-            <p>Joueurs</p>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <i class="bi bi-x"></i>
-                    <h5 class="card-title">Gaetan</h5>
-                    <p class="card-text">Paladin</p>
-                    <button type="button" class="btn btn-primary">Envoyer un message</button>
-                    <button type="button" class="btn btn-primary">Gérer</button>
+                        <p><b>Systeme de jeu :</b> <%= infos.donnee.nomSysteme%></p>
+
+                        <!--<p>horaire de la prochaine partie: 04/01/2021</p>-->
+
+                        <p><b>Description</b></p>
+                        <div style="background-color: white;  border-radius: 12px; width: 50%">
+                            <p><%= infos.donnee.description%></p>
+                        </div>
+                        <p>Caracteristique de la partie</p>
+                        <div style="background-color: white;  border-radius: 12px; width: 50%">
+                            <ul>
+                                <% infos.donnee.caracteristiques.forEach((carac) =>{ %>
+
+
+                                    <li><%= carac.caracteristique%></li>
+
+                                <% });  %>
+                            </ul>
+                        </div>
+                        <button type="button" class="btn-contact">Contacter l'organisateur</button>
+                    </div>
+
                 </div>
             </div>
-            <button type="button" class="btn btn-primary">Demander à rejoindre</button>
-        </div>-->
-    </body>
+        </div>
+    </div>
+</div>
+
+<!--
+<div>
+    <p>Joueurs</p>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <i class="bi bi-x"></i>
+            <h5 class="card-title">Gaetan</h5>
+            <p class="card-text">Paladin</p>
+            <button type="button" class="btn btn-primary">Envoyer un message</button>
+            <button type="button" class="btn btn-primary">Gérer</button>
+        </div>
+    </div>
+    <button type="button" class="btn btn-primary">Demander à rejoindre</button>
+</div>-->
+</body>
 </html>
