--- a/views/resultat.ejs
+++ b/views/resultat.ejs
@@ -1,67 +1,79 @@
 <!DOCTYPE html>
 
 <html lang="fr" >
-    <head>
+<head>
     <meta charset="utf-8" />
     <title>Resultat</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    </head>
-    <body>
-        <div>
-            <h5>Resultat de la recherche</h5>
+    <link rel="stylesheet" href="style.css">
 
-            <select class="form-select" aria-label="Default select example">
-                <option selected>partie recente</option>
-                <option value="1">partie ancienne</option>
-            </select>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Systeme</option>
-                <option value="1">D&D 4e</option>
-                <option value="2">CyberPunk</option>
-                <option value="3">Personalisé</option>
-            </select>
-            </select><select class="form-select" aria-label="Default select example">
-                <option selected>titre</option>
-                <option value="1">Game master</option>
-                <option value="2">description</option>
-                <option value="3">etiquette</option>
-            </select><select class="form-select" aria-label="Default select example">
-                <option selected>nombre de joueur</option>
-                <option value="1">Game master</option>
-                <option value="2">description</option>
-                <option value="3">etiquette</option>
-            </select>
+</head>
+<body>
 
-            <% res.forEach(function(partie){
-              %>
+<div class="container">
+    <div class="row">
+        <div class="col-xl">
+
             <div>
+                <h5>Resultat de la recherche</h5>
+
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>partie recente</option>
+                    <option value="1">partie ancienne</option>
+                </select>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Systeme</option>
+                    <option value="1">D&D 4e</option>
+                    <option value="2">CyberPunk</option>
+                    <option value="3">Personalisé</option>
+                </select>
+                </select><select class="form-select" aria-label="Default select example">
+                    <option selected>titre</option>
+                    <option value="1">Game master</option>
+                    <option value="2">description</option>
+                    <option value="3">etiquette</option>
+                </select><select class="form-select" aria-label="Default select example">
+                    <option selected>nombre de joueur</option>
+                    <option value="1">Game master</option>
+                    <option value="2">description</option>
+                    <option value="3">etiquette</option>
+                </select>
+
+                <% res.forEach(function(partie){
+                %>
+                <div>
 
 
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h6 class="card-title"><%-partie.donnee.nomPartie %></h5>
-                        <p class="card-text"><%-partie.donnee.nomSysteme %></p>
+                    <div class="text-zone">
+                        <div class="card-body">
+                            <h6 class="card-title"><%-partie.donnee.nomPartie %></h5>
+                                <p class="card-text"><%-partie.donnee.nomSysteme %></p>
 
 
 
-                        <ul>
-                            <% partie.donnee.caracteristiques.forEach((carac) => { %>
-                              <li> <%= carac.caracteristique %></li>
-                          <%  }); %>
-                        </ul>
-                        <p> <%= partie.donnee.nombreJoueur %> joueur(s)</p>
+                                <ul>
+                                    <% partie.donnee.caracteristiques.forEach((carac) => { %>
+                                        <li> <%= carac.caracteristique %></li>
+                                    <%  }); %>
+                                </ul>
+                                <p> <%= partie.donnee.nombreJoueur %> joueur(s)</p>
+                        </div>
+                    </div>
+
+
+                    <div class="text-zone">
+                        <h6 class="card-title"><%= partie.donnee.descriptionPartie%></h6>
+                        <a href="/partie/<%=partie.idPartie%>"><button type="button" class="btn-progress">Plus de détails</button></a>
+                        <%  });%>
                     </div>
                 </div>
-
-
-                <div class="card" style="width: 18rem;">
-                    <h6 class="card-title"><%= partie.donnee.descriptionPartie%></h6>
-                    <a href="/partie/<%=partie.idPartie%>"><button type="button" class="btn btn-primary">Plus de détails</button></a>
-                <%  });%>
-                </div>
             </div>
+
         </div>
-    </body>
+    </div>
+</div>
+
+</body>
 </html>
