--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -45,17 +45,15 @@
                     <div>
                         <p>Niveu de jeu</p>
                         <ul>
-                            <li><%= infos.pseudo%></li>
-                            <li><%= infos.pseudo%></li>
-                            <li><%= infos.pseudo%></li>
+                            <li><%= preference[0].Valeur%></li>
                         </ul>
                     </div>
                     <div>
                         <p>genre</p>
                         <ul>
-                            <li><%= infos.pseudo%></li>
-                            <li><%= infos.pseudo%></li>
-                            <li><%= infos.pseudo%></li>
+                            <li><%= preference[1].Valeur%></li>
+                            <li><%= preference[2].Valeur%></li>
+                            
                         </ul>
                     </div>
                 </div>
@@ -63,15 +61,13 @@
                     <div>
                         <p>Systeme de preference</p>
                         <ul>
-                            <li><%= infos.pseudo%></li>
-                            <li><%= infos.pseudo%></li>
+                            <li><%= preference[3].Valeur%></li>
+                            <li><%= preference[4].Valeur%></li>
                         </ul>
                     </div>
                     <div>
                         <p>Meta</p>
                         <ul>
-                            <li><%= infos.pseudo%></li>
-                            <li><%= infos.pseudo%></li>
                         </ul>
                     </div>
                 </div>
