--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,19 +1,32 @@
 <nav id="nav" class="navbar is-dark" role="navigation" aria-label="main navigation">
+
+    <%
+        if (connected) { %>
+
     <!-- start img profil-->
     <div class="navbar-brand">
         <a class="navbar-item" href="profil.php">
             <!-- lien-->
             <img src="../velasquez-philippe-iv-1628.jpg" width="112" height="100">
         </a>
-        <p>Gaspard</p>
+        <p><%= username %> </p>
         <p>Aventurier débutant</p>
               
     </div>
+
+    <%  }else{ %>
+
+    <div class="navbar-brand">
+        <a class="nav-link active" aria-current="page" href="/login_page">Connexion</a>
+    </div>
+    <% } %>
     <!-- end img profil -->
 
     <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <%
+            if (connected) { %>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Mon profil</a>
             </li>
@@ -23,15 +36,19 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Mes personnages</a>
             </li>
+            <%  } %>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Forum</a>
             </li>
+            <%
+            if (connected) { %>
             <li class="nav-item">
-                <a class="nav-link" href="#">deconnection</a>
+                <a class="nav-link" href="/disconnect">deconnection</a>
             </li>
+            <%  } %>
         </ul>
     </div>
  
