--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -1,8 +1,99 @@
-Test
-<%
-if (connected) { %>
-<h3> Bienvenue, <%=username %> </h3>
-<% }else{ %>
+<!DOCTYPE html>
 
-<h3> On se connecte <a href="/login_page">svp</a> </h3>
-<% } %>
+<html lang="fr" >
+    <head>
+    <meta charset="utf-8" />
+    <title>Acceuil</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    </head>
+    <body>
+        <!--Navbar lien-->
+        <%- include('navbar.ejs'); %>
+
+        <!-- Acceuil-->
+        <div class="container">
+            <div class="col align-self-center">
+                <button type="button" class="btn btn-primary">Rechercher une partie</button>
+                <button type="button" class="btn btn-primary">Acceder au flux</button>
+            </div>
+            <!-- Acces au parite en cour-->
+            <div class="row align-items-center">
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Castel Or-Azur</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p>1</p>
+                            <i class="bi bi-person-fill"></i>
+                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Castel Or-Azur</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p>1</p>
+                            <i class="bi bi-person-fill"></i>
+                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Castel Or-Azur</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p>1</p>
+                            <i class="bi bi-person-fill"></i>
+                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            
+            <div class="row align-items-center">
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Castel Or-Azur</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p>1</p>
+                            <i class="bi bi-person-fill"></i>
+                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Castel Or-Azur</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p>1</p>
+                            <i class="bi bi-person-fill"></i>
+                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Castel Or-Azur</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p>1</p>
+                            <i class="bi bi-person-fill"></i>
+                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                        </div>
+                    </div>
+                </div>
+
+               <button type="button" class="btn btn-primary">cree une partie</button>
+            </div>
+        </div>
+    </body>
+</html>
