lien nav bar et modification chemin: profile/id -> profile et partie/id -> pertie

--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -15,8 +15,8 @@
         <!-- Acceuil-->
         <div class="container">
             <div class="col align-self-center">
-                <button type="button" class="btn btn-primary">Rechercher une partie</button>
-                <button type="button" class="btn btn-primary">Acceder au flux</button>
+                <a type="button" href="/partie" class="btn btn-primary">Rechercher une partie</button>
+                <a type="button" href="#" class="btn btn-primary">Acceder au flux</button>
             </div>
             <!-- Acces au parite en cour-->
             <div class="row align-items-center">
