--- a/views/edition_profil.ejs
+++ b/views/edition_profil.ejs
@@ -10,7 +10,7 @@
     </head>
     <body>
         <!--Navbar lien-->
-        <?php include ("navbar.php") ?>
+        <?php include ("navbar.ejs") ?>
 
         <!-- Acceuil-->
         <div>
