--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!--Navbar lien-->
-        <%- include('navbar.php'); %>
+        <%- include('navbar.ejs'); %>
 
         <!-- Acceuil-->
         <div>
