--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,15 +1,15 @@
 <nav id="nav" class="navbar is-dark" role="navigation" aria-label="main navigation">
 
     <%
-        if (connected) { %>
+        if (session.connected) { %>
 
     <!-- start img profil-->
     <div class="navbar-brand">
-        <a class="navbar-item" href="profil.php">
+        <a class="navbar-item" href="/profil">
             <!-- lien-->
             <img src="../velasquez-philippe-iv-1628.jpg" width="112" height="100">
         </a>
-        <p><%= username %> </p>
+        <p><%= session.idUser %> </p>
         <p>Aventurier débutant</p>
               
     </div>
@@ -26,25 +26,25 @@
         <div class="navbar-start">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <%
-            if (connected) { %>
+            if (session.connected) { %>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Mon profil</a>
+                <a class="nav-link active" aria-current="page" href="/profile">Mon profil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Mes contacts</a>
+                <a class="nav-link" href="/contacts/">Mes contacts</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Mes personnages</a>
             </li>
             <%  } %>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Accueil</a>
+                <a class="nav-link disabled" href="/" tabindex="-1" aria-disabled="true">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Forum</a>
             </li>
             <%
-            if (connected) { %>
+            if (session.connected) { %>
             <li class="nav-item">
                 <a class="nav-link" href="/disconnect">deconnection</a>
             </li>
