doc et console.log

--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -97,7 +97,7 @@ function addContact(){
 
 function acceptInvite(ref){
   const pseudoInput = ref;
-  console.log("à ajouter : "+pseudoInput);
+  //console.log("à ajouter : "+pseudoInput);
   let returns = false;
 
 
