--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -15,8 +15,8 @@
         <!-- Acceuil-->
         <div class="container">
             <div class="col align-self-center">
-                <a type="button" href="/partie" class="btn btn-primary">Rechercher une partie</button>
-                <a type="button" href="#" class="btn btn-primary">Acceder au flux</button>
+                <a type="button" href="/partie" class="btn btn-primary">Rechercher une partie</a>
+                <a type="button" href="/flux" class="btn btn-primary">Acceder au flux</a>
             </div>
             <!-- Acces au parite en cour-->
             <div class="row align-items-center">
@@ -56,7 +56,7 @@
             </div>
 
 
-            
+
             <div class="row align-items-center">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
