--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -12,17 +12,18 @@
 
         <div class="container row">
             <div class="jumbotron col-sm-4 pull-center">
+                <a type="button" href="/sign_up_page" class="btn btn-primary">S'inscrire</a>
                 <form action="/connect/" method="post">
                     <div>
                         <label>Pseudo :</label>
                         <input type="text" name="username" for="username"/>
                     </div>
                     <div>
-                        <label>Password :</label>
+                        <label>Mot de passe :</label>
                         <input type="password" name="password" for="password"/>
                     </div>
                     <div>
-                        <input class="btn btn-primary" type="submit" value="Log In"/>
+                        <input class="btn btn-primary" type="submit" value="Connexion"/>
                     </div>
                 </form>
             </div>
