--- a/views/flux.ejs
+++ b/views/flux.ejs
@@ -3,7 +3,7 @@
 <html lang="fr" >
     <head>
     <meta charset="utf-8" />
-    <title>flux</title>
+    <title>Recommandations</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -12,7 +12,34 @@
 
         <!-- Gauche-->
         <div>
-            <div>
+          <h3> Votre flux </h3>
+          <% res.forEach(function(partie){
+            %>
+          <div>
+
+
+              <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                      <h6 class="card-title"><%-partie.donnee.nomPartie %></h5>
+                      <p class="card-text"><%-partie.donnee.nomSysteme %></p>
+
+
+
+                      <ul>
+                          <% partie.donnee.caracteristiques.forEach((carac) => { %>
+                            <li> <%= carac.caracteristique %></li>
+                        <%  }); %>
+                      </ul>
+                      <p> <%= partie.donnee.nombreJoueur %> joueur(s)</p>
+                  </div>
+              </div>
+
+
+              <div class="card" style="width: 18rem;">
+                  <h6 class="card-title"><%= partie.donnee.descriptionPartie%></h6>
+                  <a href="/partie/<%=partie.idPartie%>"><button type="button" class="btn btn-primary">Plus de détails</button></a>
+              <%  });%>
+            <!--<div>
                 <h5>Parceque vous avez aimez Dougeon and Dragons</h5>
 
                 <div class="card" style="width: 18rem;">
@@ -33,12 +60,12 @@
                     <p class="card-text">guerre de trois sang et plus</p>
                     <button type="button" class="btn btn-primary">Plus de detail</button>
                 </div>
-            </div>
+            </div>-->
         </div>
 
         <!-- droite-->
         <div>
-           <h5>objectifs mensuels</h5> 
+           <h5>objectifs mensuels</h5>
 
            <p>Jouer 5 partie</p>
            <div class="progress">
@@ -58,7 +85,7 @@
         </div>
         <div>
             <h5>prochaine evenements</h5>
-            
+
             <p>date 1</p>
             <a>Evenement 3</a>
 
