--- a/views/inscription.ejs
+++ b/views/inscription.ejs
@@ -22,15 +22,16 @@
                         <input type="text" name="username" for="username"/>
                     </div>
                     <div>
-                        <label>Password :</label>
+                        <label>Mot de passe :</label>
                         <input type="password" name="password" for="password"/>
                     </div>
 
 
                     <div>
-                        <input class="btn btn-primary" type="submit" value="Log In"/>
+                        <input class="btn btn-primary" type="submit" value="Connexion"/>
                     </div>
                 </form>
+
             </div>
         </div>
     </body>
