--- a/views/edition_profil.ejs
+++ b/views/edition_profil.ejs
@@ -10,7 +10,7 @@
     </head>
     <body>
         <!--Navbar lien-->
-        <?php include ("navbar.ejs") ?>
+          <%- include('navbar.ejs'); %>
 
         <!-- Acceuil-->
         <div>
@@ -55,7 +55,7 @@
                             <input type="checkbox" name="option" id="CyberPunk"value="">
                             <label class="form-ckeck-label" for="CyberPunk">Personalisé</label>
                         </div>
-                        
+
                         <div class="form-check">
                             <p>genre</p>
                             <input type="checkbox" name="option" id = "fantasy"value="">
