--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -1,4 +1,5 @@
 <div class="modal-body">
+      <%- include('navbar.ejs'); %>
     <form method="post" action="/recherche" autocomplete="on">
       <div class="mb-3">
         <label class="col-form-label">Mots clé de la recherche</label>
