navbar dans contact et flux

--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     </head>
     <body>
-
+      <!--Navbar lien-->
+      <%- include('navbar.ejs'); %>
         <div class="main">
             <!-- Navbar Profil/Contact-->
             <nav class="navbar navbar-light bg-light">
