--- a/views/creation_partie.ejs
+++ b/views/creation_partie.ejs
@@ -10,7 +10,7 @@
     </head>
     <body>
         <!-- Navbar-->
-        <%- include('navbar.php'); %>
+        <%- include('navbar.ejs'); %>
         <form method="get" action="index.php" autocomplete="on">
             <div class="form-group col-6 mx-auto">
                 <input type="text"  class="form-control" name="Alim" placeholder="Nom de la Partie">
