--- a/views/flux.ejs
+++ b/views/flux.ejs
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     </head>
     <body>
-
+        <!--Navbar lien-->
+        <%- include('navbar.ejs'); %>
         <!-- Gauche-->
         <div>
           <h3> Votre flux </h3>
