--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -17,7 +17,7 @@
         <!-- Acceuil-->
         <div class="container">
             <div class="row">
-                    <a type="button" href="/partie" class="btn-agree">Rechercher une partie</a>
+                    <a type="button" href="/searchpage" class="btn-agree">Rechercher une partie</a>
                 
                     <a type="button" href="/flux" class="btn-agree">Acceder au flux</a>
                 
