--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -38,7 +38,7 @@
             </li>
             <%  } %>
             <li class="nav-item">
-                <a class="nav-link disabled" href="/" tabindex="-1" aria-disabled="true">Accueil</a>
+                <a class="nav-link " href="/" tabindex="-1" aria-disabled="true">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Forum</a>
