--- a/views/edition_profil.ejs
+++ b/views/edition_profil.ejs
@@ -18,177 +18,81 @@
         <div>
 
             <!-- Navbar Profil/Contact-->
-            <nav class="navbar navbar-light bg-light">
+            <nav class="navbar">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="Profil.php">Profil</a>
-                    <a class="nav-link" href="contact.ejs">Contact</a>
+                    <a class="nav-link" aria-current="page" href="/profile" style="color: yellow">Profil</a>
+                    <a class="nav-link" href="contact.ejs" style="color: yellow">Contact</a>
                 </div>
             </nav>
 
             <!-- Card profil-->
             <div>
-                <form action="/editionprofile" method="post">
+                <form action="profil.php">
                     <h5>Nom utilisateur</h5>
                     <p>gaspard</p>
-                    <!DOCTYPE html>
 
-                    <html lang="fr" >
-                    <head>
-                        <meta charset="utf-8" />
-                        <title>Profil</title>
+                    <h5>Pays</h5>
+                    <p>france</p>
 
-                        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-                        <link rel="stylesheet" href="style.css">
-                    </head>
-                    <body>
-                    <!--Navbar lien-->
-                    <?php include ("navbar.php") ?>
+                    <h5>Fuseau horaire</h5>
+                    <p>GTM + 1</p>
 
-                    <!-- Acceuil-->
-                    <div>
+                    <h5>Description</h5>
+                    <p style="background-color: white; border-radius: 12px; width: 50%">un juour qui a tu les jeux fpezkf^pzkef^pzkef^pzkef^pkezf^pkzefpkzf^pz</p>
 
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-1">
-
-<<<<<<< HEAD
-            <div>
-                <form action="/editionprofile" method="post">
-                    <h5>preference de jeu</h5>
-                    <div>
-                        <div class="form-check">
-                            <p>Systeme</p>
-                            <input type="checkbox" name="systeme" id = "fantasy"value="">
-                            <label class="form-ckeck-label" for="fantasy">D&D 5e </label>
-                            <input type="checkbox" name="systeme" id="Sci-fi"value="">
-                            <label class="form-ckeck-label" for="Sci-fi">Cyberpunk </label>
-                            <input type="checkbox" name="systeme" id="CyberPunk"value="">
-                            <label class="form-ckeck-label" for="CyberPunk">Personalisé</label>
-                        </div>
-
-                        <div class="form-check">
-                            <p>genre</p>
-                            <input type="checkbox" name="genre" id = "fantasy"value="">
-                            <label class="form-ckeck-label" for="fantasy">fantasy </label>
-                            <input type="checkbox" name="genre" id="Sci-fi"value="">
-                            <label class="form-ckeck-label" for="Sci-fi">Sci-fi </label>
-                            <input type="checkbox" name="genre" id="CyberPunk"value="">
-                            <label class="form-ckeck-label" for="CyberPunk">"CyberPunk</label>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="form-check">
-                            <p>niveau</p>
-                            <input type="checkbox" name="niveau" id = "fantasy"value="novice">
-                            <label class="form-ckeck-label" for="fantasy">debutant </label>
-                            <input type="checkbox" name="niveau" id="Sci-fi"value="moyenne">
-                            <label class="form-ckeck-label" for="Sci-fi">moyenne</label>
-                            <input type="checkbox" name="niveau" id="CyberPunk"value="complexe">
-                            <label class="form-ckeck-label" for="CyberPunk">"Complexe</label>
-                        </div>
-                        <div class="form-check">
-                            <p>Meta</p>
-                            <input type="checkbox" name="meta1" id = "fantasy"value="">
-                            <label class="form-ckeck-label" for="fantasy">accepte les Joueurs nouveau </label>
-                            <input type="checkbox" name="meta2" id="Sci-fi"value="">
-                            <label class="form-ckeck-label" for="Sci-fi">Partie serieux</label>
-                        </div>
-                    </div>
-
-                    <input type="submit" class="btn btn-primary" name="submit" value="Enregistrer les preferences">
+                    <input type="submit" class="btn-agree" name="submit" value="Enregistrer les parametre">
                 </form>
             </div>
-        </div>
-    </body>
-=======
-                                    <!-- Navbar Profil/Contact-->
-                                    <nav class="navbar">
-                                        <div class="navbar-nav">
-                                            <a class="nav-link" aria-current="page" href="Profil.php" style="color: yellow">Profil</a>
-                                            <a class="nav-link" href="contact.ejs" style="color: yellow">Contact</a>
-                                        </div>
-                                    </nav>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-1">
+                        <form action="/editionprofile" method="post">
+                            <h5>preference de jeu</h5>
+                            <div>
+                                <div class="form-check">
+                                    <p>Systeme</p>
+                                    <input type="checkbox" name="systeme" id = "fantasy"value="">
+                                    <label class="form-ckeck-label" for="fantasy">D&D 5e </label>
+                                    <input type="checkbox" name="systeme" id="Sci-fi"value="">
+                                    <label class="form-ckeck-label" for="Sci-fi">Cyberpunk </label>
+                                    <input type="checkbox" name="systeme" id="CyberPunk"value="">
+                                    <label class="form-ckeck-label" for="CyberPunk">Personalisé</label>
                                 </div>
 
-
-                                <div class="col-xl">
-                                    <div class="row">
-
-                                        <!-- Card profil-->
-                                        <div>
-                                            <form action="profil.php">
-                                                <h5>Nom utilisateur</h5>
-                                                <p>gaspard</p>
-
-                                                <h5>Pays</h5>
-                                                <p>france</p>
-
-                                                <h5>Fuseau horaire</h5>
-                                                <p>GTM + 1</p>
-
-                                                <h5>Description</h5>
-                                                <p style="background-color: white; border-radius: 12px; width: 50%">un juour qui a tu les jeux fpezkf^pzkef^pzkef^pzkef^pkezf^pkzefpkzf^pz</p>
-
-                                                <input type="submit" class="btn-agree" name="submit" value="Enregistrer les parametre">
-                                            </form>
-                                        </div>
-
-                                        <div>
-                                            <form action="profil.php">
-                                                <h5>preference de jeu</h5>
-                                                <div>
-                                                    <div class="form-check">
-                                                        <p>Systeme/p>
-                                                            <input type="checkbox" name="option" id = "fantasy"value="">
-                                                            <label class="form-ckeck-label" for="fantasy">D&D 5e </label>
-                                                            <input type="checkbox" name="option" id="Sci-fi"value="">
-                                                            <label class="form-ckeck-label" for="Sci-fi">Cyberpunk </label>
-                                                            <input type="checkbox" name="option" id="CyberPunk"value="">
-                                                            <label class="form-ckeck-label" for="CyberPunk">Personalisé</label>
-                                                    </div>
-
-                                                    <div class="form-check">
-                                                        <p>genre</p>
-                                                        <input type="checkbox" name="option" id = "fantasy"value="">
-                                                        <label class="form-ckeck-label" for="fantasy">fantasy </label>
-                                                        <input type="checkbox" name="option" id="Sci-fi"value="">
-                                                        <label class="form-ckeck-label" for="Sci-fi">Sci-fi </label>
-                                                        <input type="checkbox" name="option" id="CyberPunk"value="">
-                                                        <label class="form-ckeck-label" for="CyberPunk">"CyberPunk</label>
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <div class="form-check">
-                                                        <p>niveau</p>
-                                                        <input type="checkbox" name="option" id = "fantasy"value="">
-                                                        <label class="form-ckeck-label" for="fantasy">debutant </label>
-                                                        <input type="checkbox" name="option" id="Sci-fi"value="">
-                                                        <label class="form-ckeck-label" for="Sci-fi">moyenne</label>
-                                                        <input type="checkbox" name="option" id="CyberPunk"value="">
-                                                        <label class="form-ckeck-label" for="CyberPunk">"Complexe</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <p>Meta</p>
-                                                        <input type="checkbox" name="option" id = "fantasy"value="">
-                                                        <label class="form-ckeck-label" for="fantasy">accepte les Joueurs nouveau </label>
-                                                        <input type="checkbox" name="option" id="Sci-fi"value="">
-                                                        <label class="form-ckeck-label" for="Sci-fi">Partie serieux</label>
-                                                    </div>
-                                                </div>
-
-
-
-                                                <input type="submit" class="btn-agree" name="submit" value="Enregistrer les preferences">
-                                            </form>
-
-
-                                        </div>
-                                    </div>
-
+                                <div class="form-check">
+                                    <p>genre</p>
+                                    <input type="checkbox" name="genre" id = "fantasy"value="">
+                                    <label class="form-ckeck-label" for="fantasy">fantasy </label>
+                                    <input type="checkbox" name="genre" id="Sci-fi"value="">
+                                    <label class="form-ckeck-label" for="Sci-fi">Sci-fi </label>
+                                    <input type="checkbox" name="genre" id="CyberPunk"value="">
+                                    <label class="form-ckeck-label" for="CyberPunk">"CyberPunk</label>
                                 </div>
                             </div>
-                    </body>
->>>>>>> graphic
+                            <div>
+                                <div class="form-check">
+                                    <p>niveau</p>
+                                    <input type="checkbox" name="niveau" id = "fantasy"value="novice">
+                                    <label class="form-ckeck-label" for="fantasy">debutant </label>
+                                    <input type="checkbox" name="niveau" id="Sci-fi"value="moyenne">
+                                    <label class="form-ckeck-label" for="Sci-fi">moyenne</label>
+                                    <input type="checkbox" name="niveau" id="CyberPunk"value="complexe">
+                                    <label class="form-ckeck-label" for="CyberPunk">"Complexe</label>
+                                </div>
+                                <div class="form-check">
+                                    <p>Meta</p>
+                                    <input type="checkbox" name="meta1" id = "fantasy"value="">
+                                    <label class="form-ckeck-label" for="fantasy">accepte les Joueurs nouveau </label>
+                                    <input type="checkbox" name="meta2" id="Sci-fi"value="">
+                                    <label class="form-ckeck-label" for="Sci-fi">Partie serieux</label>
+                                </div>
+                            </div>
+
+                            <input type="submit" class="btn btn-primary" name="submit" value="Enregistrer les preferences">
+                        </form>
+                    </div>
+                </div>
+            </div>
+     </body>
 </html>
