--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -7,41 +7,46 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link href="../test.css" rel="stylesheet" type="text/css">
+    <link href="../style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <!--Navbar lien-->
         <%- include('navbar.ejs'); %>
 
         <!-- Acceuil-->
-        <div>
+        <div class="container">
 
             <!-- Navbar Profil/Contact-->
-            <nav class="navbar navbar-light bg-light">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="Profil.php">Profil</a>
-                    <a class="nav-link" href="contact.ejs">Contact</a>
+            <nav class="navbar navbar-expand ">
+                <div class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <a class="nav-link bg-secondary" aria-current="page" href="#">Profil</a>
+                    <a class="nav-link bg-secondary" href="/contacts">Contacts</a>
                 </div>
             </nav>
 
             <!-- Card profil-->
-            <div>
-                <h5>Nom utilisateur</h5>
-                <p><%= infos.pseudo%></p>
-
-                <h5>Pays</h5>
-                <p><%= infos.pseudo%></p>
-
-                <h5>Fuseau horaire</h5>
-                <p><%= infos.fuseauHorraireJoueur%></p>
-
-                <h5>Description</h5>
-                <p><%= infos.description%></p>
+            <div class="row align-items-center bg-secondary">
+                <div class="col" >
+                    <h5>Nom utilisateur</h5>
+                    <p><%= infos.pseudo%></p>
+                </div>
+                <div class="col">
+                    <h5>Pays</h5>
+                    <p><%= infos.pseudo%></p>
+                </div>
+                <div class="col">
+                    <h5>Fuseau horaire</h5>
+                    <p><%= infos.fuseauHorraireJoueur%></p>
+                </div>
+                <div class="col">
+                    <h5>Description</h5>
+                    <p><%= infos.description%></p>
+                </div>
             </div>
 
-            <div>
+            <div class="row align-items-center bg-secondary">
                 <h5>preference de jeu</h5>
-                <div>
+                <div class="col">
                     <div>
                         <p>Niveu de jeu</p>
                         <ul>
@@ -63,7 +68,7 @@
                         </ul>
                     </div>
                 </div>
-                <div>
+                <div class="col">
                     <div>
                         <p>Systeme de preference</p>
                         <ul>
@@ -85,6 +90,7 @@
                         </ul>
                     </div>
                 </div>
+            </div>
             </div>
 
         </div>
